--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -5,6 +5,7 @@ on:
     branches: [ main ]
     paths:
       - '.github/workflows/ci-build.yml'
+      - 'rstudio-savoirfR.containerfile'
 jobs:
   build:
     runs-on: ubuntu-latest
