--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         registry: ghcr.io
         username: ${{ github.repository_owner }}
-        password: ${{ secrets.CR_PAT }}
+        password: ${{ secrets.GH_TOKEN }}
 
     - name: Build and push
       uses: docker/build-push-action@v2
@@ -41,4 +41,4 @@ jobs:
         build-args: |
             R_VERSION=${{matrix.r_version}}
         tags: |
-          ghcr.io/jdlom/rstudio-savoirfr/rstudio:${{matrix.r_version}} 
+          ghcr.io/${{github.repository}}/rstudio:${{matrix.r_version}} 
