--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -41,4 +41,4 @@ jobs:
         build-args: |
             R_VERSION=${{matrix.r_version}}
         tags: |
-          ghcr.io/${{github.repository}}/rstudio:${{matrix.r_version}} 
+          ghcr.io/${{github.repository}}:${{matrix.r_version}} 
