--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v2
   
     - name: Branch name
-      run: echo running on branch ${GITHUB_REF##*/} for ${{matrix.r_version}}
+      run: echo running on branch ${{github.ref_name}} for ${{matrix.r_version}}
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
