--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -4,8 +4,11 @@ on:
   pull_request:
     branches: [ main ]
     paths:
-      - '.github/workflows/ci-build.yml'
-      - 'rstudio-savoirfR.containerfile'
+      - .github/workflows/ci-build.yml
+      - rstudio-savoirfR.containerfile
+  
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
